# fp

./: README.md  stack.yaml
hw1/: README.md  hw1.cabal
hw1/src/: Lib.hs
hw1/test/: LibSpec.hs
hw2/: README.md  hw2.cabal
hw2/app/: Arithmetics.hs  Nondeterministic.hs
hw3/: README.md  hw3.cabal
hw3/src/: Arithmetics.hs  Main.hs  Parser.hs
hw3/test/: ArithmeticsSpec.hs
hw4/: LICENSE  hw4.cabal
hw4/src/: Comonads.hs  FS.hs  Lens.hs  Th.hs
hw4/test/: Spec.hs
