name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/vlakam/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Vladislav Kamenev
maintainer:          mazahakaforever@ya.ru
copyright:           2017 Vladislav Kamenev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Testconfig.hs
  hs-source-dirs:     test
  ghc-options:        -Wall
  build-depends:      base >= 4.9 && < 5
                      , hw1
                      , random
                      , hspec == 2.*
  other-modules:      LibSpec
  default-language:   Haskell2010