name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/vlakam/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Vladislav Kamenev
maintainer:          mazahakaforever@ya.ru
copyright:           2017 Vladislav Kamenev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Th, Lens, FS, Comonads
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                      , template-haskell
                      , lens
                      , directory
                      , comonad
                      , text
                      , filepath
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , hw4
                     , hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
